kubernetes/samples/istio/001-basic-setup/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: default
  name: company-app-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: default
  name: company-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - company-app-gateway
  http:
    - route:
        - destination:
            host: "company-app.default.svc.cluster.local"
            port:
              number: 8080
