kubernetes/samples/istio/001-basic-setup/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo
  name: company-app-vs
spec:
  hosts:
    - "*"
  gateways:
    - company-app-gateway
  http:
    - route:
        - destination:
            host: "company-app.demo.svc.cluster.local"
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo
  name: address-app-vs
spec:
  hosts:
    - address-app
  http:
    - name: "default-route"
      route:
        - destination:
            host: "address-app.demo.svc.cluster.local"
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: demo
  name: job-app-vs
spec:
  hosts:
    - job-app
  http:
    - name: "default-route"
      route:
        - destination:
            host: "job-app.demo.svc.cluster.local"
            port:
              number: 8082
